sculpt box hide missing update with non-deform modifiers #107906

Closed
opened 2023-05-13 10:55:12 +02:00 by CHET · 1 comment

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-25 13:50, hash: 6ee8aa4997ee

Short description of error
In sculpt mode, if an object has modifiers, the hide function doesn't work.

Exact steps for others to reproduce the error

  1. add object
  2. add modifier subdivide
  3. change to sculpt mode
  4. turn off "Use deform only"
  5. try to hide part off object
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.15 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-25 13:50, hash: `6ee8aa4997ee` **Short description of error** In sculpt mode, if an object has modifiers, the hide function doesn't work. **Exact steps for others to reproduce the error** 1. add object 2. add modifier subdivide 3. change to sculpt mode 4. turn off "Use deform only" 5. try to hide part off object
CHET added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-13 10:55:12 +02:00
Member

Thanks for the report. Can confirm in 3.6, 2.83. Appears to be a long standing issue.

Thanks for the report. Can confirm in 3.6, 2.83. Appears to be a long standing issue.
Philipp Oeser changed title from viewport update bug to sculpt box hide missing update with non-deform modifiers 2023-05-15 09:49:57 +02:00
Philipp Oeser self-assigned this 2023-05-15 09:55:20 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-15 10:39:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107906
No description provided.