Fix #107906: sculpt box hide missing update with non-deform modifiers

When not drawing from PBVH (e.g. with non-deform modifiers), we have to
tag with ID_RECALC_GEOMETRY.

Pull Request: https://projects.blender.org/blender/blender/pulls/107938